--- a/examples/characters/char1/char_cfg.yaml
+++ b/examples/characters/char1/char_cfg.yaml
@@ -1,83 +1,203 @@
-height: 602
+height: 3024
 skeleton:
-- loc:
-  - 264
-  - 397
+- loc: !!python/tuple
+  - 2001
+  - 1400
   name: root
   parent: null
-- loc:
-  - 264
-  - 397
-  name: hip
+- loc: !!python/tuple
+  - 1949
+  - 1349
+  name: nose_base_nose
   parent: root
-- loc:
-  - 247
-  - 232
-  name: torso
-  parent: hip
-- loc:
-  - 231
-  - 119
-  name: neck
-  parent: torso
-- loc:
-  - 151
-  - 245
-  name: right_shoulder
-  parent: torso
-- loc:
-  - 99
-  - 278
-  name: right_elbow
-  parent: right_shoulder
-- loc:
-  - 46
-  - 311
-  name: right_hand
-  parent: right_elbow
-- loc:
-  - 343
-  - 218
-  name: left_shoulder
-  parent: torso
-- loc:
-  - 396
-  - 245
-  name: left_elbow
-  parent: left_shoulder
-- loc:
-  - 449
-  - 278
-  name: left_hand
-  parent: left_elbow
-- loc:
-  - 191
-  - 404
-  name: right_hip
-  parent: root
-- loc:
-  - 165
-  - 476
-  name: right_knee
-  parent: right_hip
-- loc:
-  - 138
-  - 556
-  name: right_foot
-  parent: right_knee
-- loc:
-  - 337
-  - 390
-  name: left_hip
-  parent: root
-- loc:
-  - 376
-  - 456
-  name: left_knee
-  parent: left_hip
-- loc:
-  - 409
-  - 549
-  name: left_foot
-  parent: left_knee
-width: 508
+- loc: !!python/tuple
+  - 1811
+  - 1321
+  name: nose_left_nose
+  parent: nose_base_nose
+- loc: !!python/tuple
+  - 2152
+  - 1301
+  name: nose_right_nose
+  parent: nose_base_nose
+- loc: !!python/tuple
+  - 1688
+  - 1150
+  name: left_eye_inner_corner
+  parent: nose_base_nose
+- loc: !!python/tuple
+  - 1271
+  - 1099
+  name: left_eye_lower_right_middle
+  parent: left_eye_inner_corner
+- loc: !!python/tuple
+  - 938
+  - 1059
+  name: left_eye_lower_middle
+  parent: left_eye_lower_right_middle
+- loc: !!python/tuple
+  - 731
+  - 1015
+  name: left_eye_lower_left_middle
+  parent: left_eye_lower_middle
+- loc: !!python/tuple
+  - 827
+  - 686
+  name: left_eye_outer_corner
+  parent: left_eye_lower_left_middle
+- loc: !!python/tuple
+  - 1140
+  - 730
+  name: left_eye_upper_left_middle
+  parent: left_eye_outer_corner
+- loc: !!python/tuple
+  - 1517
+  - 769
+  name: left_eye_upper_middle
+  parent: left_eye_upper_left_middle
+- loc: !!python/tuple
+  - 1584
+  - 944
+  name: left_eye_upper_right_middle
+  parent: left_eye_upper_middle
+- loc: !!python/tuple
+  - 1465
+  - 627
+  name: left_eyebrow_inner
+  parent: left_eye_inner_corner
+- loc: !!python/tuple
+  - 1271
+  - 579
+  name: left_eyebrow_middle_right
+  parent: left_eyebrow_inner
+- loc: !!python/tuple
+  - 1049
+  - 563
+  name: left_eyebrow_middle_left
+  parent: left_eyebrow_middle_right
+- loc: !!python/tuple
+  - 787
+  - 547
+  name: left_eyebrow_outer
+  parent: left_eyebrow_middle_left
+- loc: !!python/tuple
+  - 2310
+  - 1150
+  name: right_eye_inner_corner
+  parent: nose_base_nose
+- loc: !!python/tuple
+  - 2604
+  - 1122
+  name: right_eye_lower_left_middle
+  parent: right_eye_inner_corner
+- loc: !!python/tuple
+  - 2917
+  - 1103
+  name: right_eye_lower_middle
+  parent: right_eye_lower_left_middle
+- loc: !!python/tuple
+  - 3183
+  - 1087
+  name: right_eye_lower_right_middle
+  parent: right_eye_lower_middle
+- loc: !!python/tuple
+  - 3239
+  - 750
+  name: right_eye_outer_corner
+  parent: right_eye_lower_right_middle
+- loc: !!python/tuple
+  - 2826
+  - 793
+  name: right_eye_upper_right_middle
+  parent: right_eye_outer_corner
+- loc: !!python/tuple
+  - 2532
+  - 837
+  name: right_eye_upper_middle
+  parent: right_eye_upper_right_middle
+- loc: !!python/tuple
+  - 2406
+  - 992
+  name: right_eye_upper_left_middle
+  parent: right_eye_upper_middle
+- loc: !!python/tuple
+  - 2564
+  - 654
+  name: right_eyebrow_inner
+  parent: right_eye_inner_corner
+- loc: !!python/tuple
+  - 2771
+  - 611
+  name: right_eyebrow_middle_left
+  parent: right_eyebrow_inner
+- loc: !!python/tuple
+  - 2981
+  - 591
+  name: right_eyebrow_middle_right
+  parent: right_eyebrow_middle_left
+- loc: !!python/tuple
+  - 3223
+  - 587
+  name: right_eyebrow_outer
+  parent: right_eyebrow_middle_right
+- loc: !!python/tuple
+  - 1993
+  - 1642
+  name: mouth_upper_center
+  parent: nose_base_nose
+- loc: !!python/tuple
+  - 2398
+  - 1630
+  name: mouth_upper_right_middle
+  parent: mouth_upper_center
+- loc: !!python/tuple
+  - 2715
+  - 1622
+  name: mouth_upper_right
+  parent: mouth_upper_right_middle
+- loc: !!python/tuple
+  - 2521
+  - 1785
+  name: mouth_right_middle
+  parent: mouth_upper_right
+- loc: !!python/tuple
+  - 2326
+  - 1912
+  name: mouth_lower_right
+  parent: mouth_right_middle
+- loc: !!python/tuple
+  - 2005
+  - 1936
+  name: mouth_lower_right_middle
+  parent: mouth_lower_right
+- loc: !!python/tuple
+  - 1858
+  - 1936
+  name: mouth_lower_center
+  parent: mouth_lower_right_middle
+- loc: !!python/tuple
+  - 1695
+  - 1948
+  name: mouth_lower_left_middle
+  parent: mouth_lower_center
+- loc: !!python/tuple
+  - 1497
+  - 1948
+  name: mouth_lower_left
+  parent: mouth_lower_left_middle
+- loc: !!python/tuple
+  - 1422
+  - 1813
+  name: mouth_left_middle
+  parent: mouth_lower_left
+- loc: !!python/tuple
+  - 1394
+  - 1654
+  name: mouth_upper_left
+  parent: mouth_left_middle
+- loc: !!python/tuple
+  - 1620
+  - 1654
+  name: mouth_upper_left_middle
+  parent: mouth_upper_left
+width: 4032
